wyndhamhotels.com (archived on 2010-08-19)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;shopping;travel",
  "char_count": 26239,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.42,
  "homepage_snapshot_redirected_domain": "wyndham.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101113012220id_/http://www.wyndham.com/main.wnt",
  "homepage_snapshot_url": "https://web.archive.org/web/20101114032135id_/http%3A//wyndhamhotels.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "wyndham.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100819065028id_/http%3A//www.wyndham.com/privacystatement/info.wnt",
  "policy_title": "Wyndham Hotels & Resorts - Privacy Policy",
  "policy_url": "wyndham.com/privacystatement/info.wnt",
  "sha1": "b1bfc1008580c380a6bf7dd18f850f5b2f1e9c3b",
  "simhash": 2661147159128943311,
  "simhash_updated": false,
  "site_hostname": "wyndhamhotels.com",
  "site_url": "http://wyndhamhotels.com",
  "smog": 17.66,
  "strict_updated": false,
  "timestamp": "20100819065028",
  "word_count": 4173,
  "year": 2010
}

--- a/w/wy/wyn/wyndhamhotels.com.html
+++ b/w/wy/wyn/wyndhamhotels.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wyndhamhotels.com privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622021951id_/http%3A//www.wyndham.com/privacystatement/info.wnt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wyndhamhotels.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819065028id_/http%3A//www.wyndham.com/privacystatement/info.wnt) for the most accurate reproduction.-->
 
 <html><head><title>
 Wyndham Hotels &amp; Resorts - Privacy Policy
@@ -96,7 +96,7 @@ Wyndham Hotels &amp; Resorts - Privacy Policy
 
 		    
 		    <div id="int_wbr">
-    			<div id="int_wbr_header">Wyndham Rewards&nbsp;<sup style="font-size:80%;">SM</sup><a href="/servlet/rewards_benefits.wnt">learn more</a></div>
+    			<div id="int_wbr_header">Wyndham Rewards&nbsp;<sup style="font-size:100%;">®</sup><a href="/servlet/rewards_benefits.wnt">learn more</a></div>
 			<div id="int_wbr_nav"><a href="/wbr/signin.wnt?event=globalSignIn" class="arrow" title="WYNDHAM BYREQUEST" tabindex="3">Sign in</a> | <a href="/wbr/join.wnt" title="WYNDHAM BYREQUEST" tabindex="4">Join</a>	</div>
 			<p>ByRequest benefits exclusively at Wyndham Hotels and Resorts.</p>			
 			</div>
@@ -144,26 +144,30 @@ Wyndham Hotels &amp; Resorts - Privacy Policy
 					<li><a id="mainnav_specialdeals" class="mainnav_off" href="/landing/specials.wnt" tabindex="60"><span>SPECIAL OFFERS</span></a></li>									
 				</ul>
 				<ul id="subnav_reservations" class="subnav" style="display: block;">
-					<li><a href="/rates/main.wnt" tabindex="31">Book a room</a></li>
-					<li class="last"><a href="http://wynres.wyndham.com/pls/wss/html_ui_search.resv?ref=12345&amp;cha=CANCEL&amp;usr=&amp;gue=" tabindex="33">View or cancel a reservation</a></li>
+					<li><a href="http://wynres.wyndham.com/Wyndham/control/Booking/view_cancel_reservation" tabindex="33">View or cancel existing reservations</a></li>
+					<li><a href="/rates/telephone/main.wnt" tabindex="34">Reservations by telephone</a></li>
+					<li class="last"><a href="/rates/webrates/main.wnt" tabindex="35">Best Rate Guarantee</a></li>
 				</ul>
+
 				<ul id="subnav_findlocations" class="subnav">
 					<li><a href="/hoteldir/main.wnt" tabindex="41">View All Properties</a></li>
-					<li class="last"><a href="/locator/explorehotels/main.wnt" tabindex="42">Explore Hotels &amp; Resorts</a></li>
-				</ul>		
+					<li class="last"><a href="/locator/explorehotels/main.wnt" tabindex="42">Explore Hotels &amp; 					Resorts</a></li>
+				</ul>
+	
 				<ul id="subnav_experiencewynd" class="subnav">
-					<li class="last" tabindex="56"><a href="/destinationsandinterests/wvo/main.wnt">Wyndham Vacation Ownership</a></li>
+					<li class="last"><a href="/destinationsandinterests/wvo/main.wnt" tabindex="56">Wyndham Vacation Ownership</a></li>
+					<li><a href="/destinationsandinterests/main.wnt" tabindex="55">Vacation Ideas</a></li>
 
-					<li><a href="/destinationsandinterests/main.wnt" tabindex="55">Destinations &amp; Interests</a></li>
-					<li><a href="http://www.wyndhamsmallmeetings.com" tabindex="54">Reunions &amp; Social Events</a></li>
+					<li><a href="http://www.wyndhamsmallmeetings.com/" tabindex="54">Reunions &amp; Social Events</a></li>
 					<li><a href="/meetingsandweddings/weddingsbywyndham/main.wnt" tabindex="53">Weddings</a></li>
 					<li><a href="/meetingsandweddings/meetings/main.wnt" tabindex="52">Meeting Professional</a></li>
-
-					<li><a href="/wbr/member_page.wnt" tabindex="51">Wyndham Rewards</a></li>
+					<li><a href="/servlet/rewards_benefits.wnt" tabindex="51">Wyndham ByRequest</a></li>
 				</ul>
+
 				<ul id="subnav_specialdeals" class="subnav">
-					<li class="last" tabindex="63"><a href="/specialoffers/category/specialrates.wnt" tabindex="63">Member Discounts</a></li>
-					<li><a href="http://www.WyndhamVacations.com" tabindex="62">Hotel + Air</a></li>
+
+					<li class="last"><a href="/specialoffers/category/specialrates.wnt" tabindex="63">Member Discounts</a></li>
+					<li><a href="http://www.wyndhamvacations.com/pub/agent.dll?qscr=home&amp;eapid=0-30012" tabindex="62">Hotel + Air</a></li>
 					<li><a href="/specialoffers/programs/specialsandpackages/main.wnt" tabindex="61">Our best deals</a></li>
 				</ul>			
 			</div>	
@@ -1085,23 +1089,41 @@ Participation in surveys is voluntary.  Participants who do not wish to receive 
 			<li class="last"><a href="/terms/info.wnt" tabindex="511">Terms of Use</a></li>
 		</ul>
 		<ul class="footer_nav">
-			<li class="last">©2009 Wyndham Hotels and Resorts, LLC</li>
+			<li class="last">©2010 Wyndham Hotels and Resorts, LLC</li>
 		</ul>
 
 	</div>
 	<div id="wynd_footer_signup">	E-mail me exclusive Wyndham offers. | <a href="/emailsubscriptions/main.wnt" tabindex="600" title="E-mail me exclusive Wyndham offers">Sign Up Now</a>
 	</div>
 
-<!--Simplified Media Pixels-->
-<img src="https://bp.specificclick.net?pixid=99003673" width="0" height="0" border="0">
-<!--End Simplified media Pixels-->
+<img src="https://bp.specificclick.net?pixid=99003673" width="0" height="0" border="0/">
+
+<!-- 
+Start of DoubleClick Floodlight Tag: Please do not remove 
+Activity name of this tag: GlobalFooter 
+URL of the webpage where the tag is expected to be placed: http://www.wyndham.com/footer 
+This tag must be placed between the <body> and </body> tags, as close as possible to the opening tag. 
+Creation Date: 02/19/2010 
+--> 
+<script type="text/javascript"> 
+var axel = Math.random() + ""; 
+var a = axel * 10000000000000; 
+document.write('<iframe src="https://fls.doubleclick.net/activityi;src=723017;type=retar330;cat=globa772;ord=' + a + '?" width="1" height="1" frameborder="0"></iframe>'); 
+</script><iframe src="https://fls.doubleclick.net/activityi;src=723017;type=retar330;cat=globa772;ord=8973691711200.357?" width="1" height="1" frameborder="0"></iframe> 
+<noscript> 
+<iframe src="https://fls.doubleclick.net/activityi;src=723017;type=retar330;cat=globa772;ord=1?" width="1" height="1" frameborder="0"></iframe> 
+</noscript> 
+<!-- End of DoubleClick Floodlight Tag: Please do not remove --> 
+
 
 
 
 <!-- /CMS Content -->
 
 
-<!--wcomap03-->
+<!--wcomap04-->
+
+<!-- Added for WBER, @author Cognizant -->
 
 
 
@@ -1117,7 +1139,7 @@ Copyright 1997-2006 Omniture, Inc. More info available at
 
 http://www.omniture.com -->
 
-<script type="text/javascript" src="/resources/includes/s_code.js"></script><img name="s_i_chgwyndham" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/chgwyndham/1/H.7-pdv-2/s0441522592231?[AQB]&amp;ndh=1&amp;t=31/0/2020%2014%3A16%3A7%205%200&amp;ce=ISO-8859-1&amp;g=https%3A//web.archive.org/web/20090622021951id_/http%253A//www.wyndham.com/privacystatement/info.wnt&amp;cc=USD&amp;ch=Other&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script type="text/javascript" src="/resources/includes/s_code.js"></script><img name="s_i_chgwyndham" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/chgwyndham/1/H.7-pdv-2/s01866147063651?[AQB]&amp;ndh=1&amp;t=31/0/2020%2014%3A16%3A9%205%200&amp;ce=ISO-8859-1&amp;g=https%3A//web.archive.org/web/20100819065028id_/http%253A//www.wyndham.com/privacystatement/info.wnt&amp;cc=USD&amp;ch=Other&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 
 <script type="text/javascript"><!--
 
@@ -1171,11 +1193,11 @@ s.eVar5=""
 
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 
-<script type="text/javascript"><!--
+<script type="text/javascript">
 
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
 
-//--></script>
+</script>
 <noscript>
 <p>
 <img src="http://chgwyndham.112.2O7.net/b/ss/chgwyndham/1/H.7--NS/0" height="1" width="1" alt="" />
