--- a/n/ni/nin/ninewest.com.html
+++ b/n/ni/nin/ninewest.com.html
@@ -1,30 +1,36 @@
-<!--The following is the downloaded HTML source of the ninewest.com privacy policy that was archived on 2010-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100614191058id_/http%3A//www.ninewest.com/Privacy/PRIVACY%2Cdefault%2Cpg.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ninewest.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819065952id_/http%3A//www.ninewest.com/Privacy/PRIVACY%2Cdefault%2Cpg.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 <title>Nine West: Shoes &amp; Handbags for Women</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <meta name="description" content="">
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta name="description" content="">
 
 
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/js/prototype.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/js/swfobject.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/js/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+
+
+
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/js/prototype.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/js/swfobject.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/js/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
 <script type="text/javascript">
 // Set urls for the lightbox images
-var fileLoadingImage = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/images/loading.gif";
-var fileBottomNavCloseImage = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/images/closelabel.gif";
+var fileLoadingImage = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/images/loading.gif";
+var fileBottomNavCloseImage = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/images/closelabel.gif";
 </script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/lib/js/lightbox.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/lib/js/lightbox.js" type="text/javascript"></script>
 <script type="text/javascript">
-var staticRoot = 'http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/';
-var staticLibraryRoot = 'http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1276317357069/';
+var staticRoot = 'http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/';
+var staticLibraryRoot = 'http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1282192410561/';
 </script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/searchsuggest.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/app.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/formutils.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/topnavselections.js" type="text/javascript"></script>
-<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/cookie.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/searchsuggest.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/app.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/formutils.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/topnavselections.js" type="text/javascript"></script>
+<script src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/cookie.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 var easyViewerConstants = {
@@ -48,8 +54,8 @@ easyViewerAddToBag: true
 
 <script type="text/javascript">
 // PowerReview related settings
-var pr_zip_location = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-catalog/default/v1276317357069";
-var pr_style_sheet = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/css/reviews.css";
+var pr_zip_location = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-catalog/default/v1282192410561";
+var pr_style_sheet = "http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/css/reviews.css";
 var pr_merchant_id = "2381";
 </script>
 <script type="text/javascript">
@@ -58,7 +64,7 @@ var searchSuggestURL = "/on/demandware.store/Sites-ninewest-Site/default/Search-
 
 
 <link href="/on/demandware.store/Sites-ninewest-Site/default/Link-PageByDate?cid=CSS_GLOBAL" type="text/css" rel="stylesheet">
-<link rel="shortcut icon" href="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/favicon.ico">
+<link rel="shortcut icon" href="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/favicon.ico">
 
 <script type="text/javascript" src="/on/demandware.static/Sites-Site/-/-/jscript/jquery-1.3.2.min.js"></script><script type="text/javascript" src="/on/demandware.static/Sites-Site/-/-/internal/jscript/dwac-2.10.2.js"></script>
 <link href="/on/demandware.store/Sites-ninewest-Site/default/Link-PageByDate?cid=CSS_PRIVACY" type="text/css" rel="stylesheet">
@@ -164,6 +170,16 @@ var searchSuggestURL = "/on/demandware.store/Sites-ninewest-Site/default/Search-
 
 
 
+
+
+
+
+
+
+
+
+
+
 <div id="shoppingBag">
 <a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Cart-Show">
 Checkout
@@ -174,7 +190,7 @@ Checkout
 </div>
 <div class="checkOutIcon">
 <a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Cart-Show">
-<img id="checkoutIcon" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/header/checkout_icon.gif" alt="Checkout">
+<img id="checkoutIcon" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/header/checkout_icon.gif" alt="Checkout">
 </a>
 </div>
 <div id="closet">
@@ -211,7 +227,7 @@ Checkout
 
 
 
-<div id="logo"><a href="http://www.ninewest.com"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/header/top_nav/logo.gif" title="Nine West" alt="Nine West"></a></div>
+<div id="logo"><a href="http://www.ninewest.com"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/header/top_nav/logo.gif" title="Nine West" alt="Nine West"></a></div>
 
 
 
@@ -224,9 +240,9 @@ Checkout
 
 <div id="navHolder">
 		<ul id="topNavBar">
-			<li id="lookbook"><a href="http://www.ninewest.com/LOOKBOOK_LANDING/LOOKBOOK_LANDING,default,pg.html">lookbook</a></li><li class="divider"></li>
-			<li id="nineNews"><a href="http://www.ninewest.com/Nine-News/NINE_NEWS_LANDING,default,pg.html">nine news</a></li>
-                        <li class="divider"></li> <li id="nlrewards"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/NineLoves-Show">nine loves rewards</a></li>
+			<li id="trends"><a href="http://www.ninewest.com/Trends/TRENDS_LANDING,default,pg.html">trends</a></li><li class="divider"></li>
+			<li id="asSeenIn"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/SceneSeen-Show">as seen in</a></li><li class="divider"></li>
+			<li id="vintageAmericaCollection"><a href="http://www.ninewest.com/Vintage-America-Collection/VAC,default,pg.html">vintage america collection</a></li>
 		</ul>
 		
 		
@@ -237,8 +253,8 @@ Checkout
 <tbody>
 <tr>
 <td id="searchField"><input id="query" class="textBox shellInput initialInputField" name="q" value="Search By Keyword" onkeyup="suggest('');" autocomplete="off" type="text"></td>
-<td id="searchButton"><input src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/buttons/btn_search.gif" name="searchBtn" id="searchBtn" type="image" alt="Search"></td>
-<td id="advSearch"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Search-AdvancedInc" id="advSLink"><img border="0" alt="Advanced Search" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/header/topAdvSearchLink.gif"></a></td>
+<td id="searchButton"><input src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/buttons/btn_search.gif" name="searchBtn" id="searchBtn" type="image" alt="Search"></td>
+<td id="advSearch"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Search-AdvancedInc" id="advSLink"><img border="0" alt="Advanced Search" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/header/topAdvSearchLink.gif"></a></td>
 </tr>
 </tbody>
 </table>
@@ -252,16 +268,17 @@ Checkout
 			<li id="shoes"><a href="http://www.ninewest.com/Shoes/5,default,sc.html">shoes</a></li><li class="dividerNoImage"></li>
 			<li id="handbags"><a href="http://www.ninewest.com/Handbags/1005,default,sc.html">handbags</a></li><li class="dividerNoImage"></li>
 			<li id="accessories"><a href="http://www.ninewest.com/Accessories/2,default,sc.html">accessories</a></li><li class="dividerNoImage"></li>
-			<li id="hotTrends"><a href="http://www.ninewest.com/Hot-Trends/504808,default,sc.html">hot trends</a></li><li class="dividerNoImage"></li>
-            <li id="preOrderShop"><a href="http://www.ninewest.com/Pre-Order-Shop/2944061,default,sc.html">pre order shop</a></li><li class="dividerNoImage"></li>
-			<li id="newArrivals"><a href="http://www.ninewest.com/New-Arrivals/1053,default,sc.html">new arrivals</a></li><li class="dividerNoImage"></li>
-			<li id="sale"><a href="http://www.ninewest.com/Sale/4,default,sc.html">sale</a></li><li class="dividerNoImage" style="width:36px;"></li>
-			<li id="joinUs" style="float:right;"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1276317357069/CSS/header/top_nav/nav_links/joinUs.gif" usemap="#joinUsMap"></li>
+			<li id="preOrder"><a href="http://www.ninewest.com/Pre-Order-Shop/2944061,default,sc.html">pre-order shop</a></li><li class="dividerNoImage"></li>
+            <li id="newArrivals"><a href="http://www.ninewest.com/New-Arrivals/1053,default,sc.html">new arrivals</a></li><li class="dividerNoImage"></li>
+			<li id="nineLoves"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/NineLoves-Show">nine loves rewards</a></li><li class="dividerNoImage"></li>
+			<li id="giftCards"><a href="http://www.ninewest.com/Gift-Cards/3,default,sc.html">gift cards</a></li><li class="dividerNoImage"></li>
+			<li id="sale"><a href="http://www.ninewest.com/Sale/4,default,sc.html">sale</a></li><li class="dividerNoImage"></li>
+			<li id="joinUs" style="float:right;"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1282192410561/CSS/header/top_nav/2010.07.29/joinUs.gif" usemap="#joinUsMap"></li>
 		</ul>
 	</div>
 <map name="joinUsMap">
-<area shape="rect" alt="Twitter" coords="65,0,78,13" href="http://www.twitter.com/ninewest_fred?ep_tag=TWRNAV" target="_new">
-<area shape="rect" alt="Facebook" coords="42,0,55,13" href="http://www.facebook.com/ninewest?ep_tag=FBNAV" target="_new">
+<area shape="rect" alt="Twitter" coords="23,0,36,13" href="http://www.twitter.com/ninewest_fred?ep_tag=TWRNAV" target="_new">
+<area shape="rect" alt="Facebook" coords="0,0,13,13" href="http://www.facebook.com/ninewest?ep_tag=FBNAV" target="_new">
 </map>
 
 
@@ -519,7 +536,7 @@ Checkout
 					
 						<td>Get News &amp; Updates &nbsp;</td>
 						<td><input id="optInEmail" name="dwfrm_optin_email" class="textBox shellInput initialInputField" value="enter email address" maxlength="40" type="text"></td>
-						<td><input src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/images/buttons/button_arrow.gif" name="emailBtn" id="emailBtn" type="image"></td>
+						<td><input src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/images/buttons/button_arrow.gif" name="emailBtn" id="emailBtn" type="image"></td>
 					
 				</tr>
 			</tbody>
@@ -558,6 +575,7 @@ Checkout
 <div class="footerLink"><a target="_blank" href="http://www.jonesapparel.com/careers.jsp?event=careers">Careers</a></div><div class="footerLinkDivider">|</div>
 <div class="footerLink"><a href="http://www.ninewest.com/Privacy/PRIVACY,default,pg.html">Privacy Policy</a></div><div class="footerLinkDivider">|</div>
 <div class="footerLink"><a href="http://www.ninewest.com/Terms/TERMS,default,pg.html">Terms of Use</a></div><div class="footerLinkDivider">|</div>
+<div class="footerLink"><a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/mHome-Show">Mobile</a></div><div class="footerLinkDivider">|</div>
 <div class="footerLink"><a target="_blank" href="http://www.jonesapparel.com/">Jones Apparel Group</a></div><div class="footerLinkDivider">|</div>
 <!-- <div class="footerLink"><a href="">News</a></div><div class="footerLinkDivider">|</div> -->
 <div class="footerLink">Order by phone (800) 999-1877</div>
@@ -582,7 +600,7 @@ Checkout
 
 
 
-<a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Home-Show" class="link"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1276317357069/images/footer/logo_small.gif" alt="Nine West"></a>
+<a href="http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/Home-Show" class="link"><img src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/Sites-ninewest-Library/default/v1282192410561/images/footer/logo_small.gif" alt="Nine West"></a>
 <a href="http://www.ninewest.com/Shoes/5,default,sc.html" class="link">Women's shoes</a>
 <a href="http://www.ninewest.com/Sandals/1059,default,sc.html" class="link">Sandals</a>
 <a href="http://www.ninewest.com/Dress/1044,default,sc.html" class="link">Dress Shoes</a>
@@ -605,12 +623,13 @@ Checkout
 <div class="clear"></div>
 </div>
 
+<script type="text/javascript">var XOmnPrefix="";</script>
 
 
 
 
 
-	<script language="JavaScript" type="text/javascript" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/js/omniture_live.js"></script>
+	<script language="JavaScript" type="text/javascript" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/js/omniture_live.js"></script>
 
 
 
@@ -707,11 +726,11 @@ the next lines. */
 if(!staticPageName)
 var staticPageName = document.title.replace(omnPageTitlePrefix,"")
 
-s.pageName=staticPageName
+s.pageName=XOmnPrefix+staticPageName
 s.server=""
 s.channel=""
 s.pageType=""
-s.prop1="Static"
+s.prop1=XOmnPrefix+"Static"
 s.prop2=""
 s.prop3=""
 s.prop4=""
@@ -791,7 +810,7 @@ document.getElementById("cookietest").innerHTML = "<b>ATTENTION:</b> You need to
 }
 </script>
 
-<!-- Demandware Analytics code 1.0 --><script type="text/javascript" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1276317357069/internal/jscript/dwanalytics.js"></script><script type="text/javascript">//<!--
+<!-- Demandware Analytics code 1.0 --><script type="text/javascript" src="http://demandware.edgesuite.net/aaca_prd/on/demandware.static/Sites-ninewest-Site/-/default/v1282192410561/internal/jscript/dwanalytics.js"></script><script type="text/javascript">//<!--
 /* <![CDATA[ */
 try{var trackingUrl = "http://www.ninewest.com/on/demandware.store/Sites-ninewest-Site/default/__Analytics-Tracking";var __dwAnalytics = dw.__dwAnalytics.getTracker(trackingUrl);__dwAnalytics.trackPageView();}catch(err) {};
 /* ]]> */
