paidmailz.com (archived on 2010-08-19)
{
  "alexa_rank": 86557,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 3954,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.66,
  "homepage_snapshot_redirected_domain": "paidmailz.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100926222251id_/http://paidmailz.com/pages/index.php?refid=",
  "homepage_snapshot_url": "https://web.archive.org/web/20100926221443id_/http%3A//paidmailz.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "paidmailz.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100819082921id_/http%3A//www.paidmailz.com/pages/privacy.php",
  "policy_title": "PaidMailz - Get Paid To Read E-mails And Click Ads",
  "policy_url": "paidmailz.com/pages/privacy.php",
  "sha1": "9189b6d58ed912987aa198566b1eb711e6dc76c5",
  "simhash": 8038570349756044298,
  "simhash_updated": false,
  "site_hostname": "paidmailz.com",
  "site_url": "http://paidmailz.com",
  "smog": 13.3,
  "strict_updated": false,
  "timestamp": "20100819082921",
  "word_count": 617,
  "year": 2010
}

--- a/p/pa/pai/paidmailz.com.html
+++ b/p/pa/pai/paidmailz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paidmailz.com privacy policy that was archived on 2010-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100616165828id_/http%3A//www.paidmailz.com/pages/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paidmailz.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819082921id_/http%3A//www.paidmailz.com/pages/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>PaidMailz - Get Paid To Read E-mails And Click Ads</title>
 <meta name="keywords" content="Get Paid to Surf the Web, Get Paid to Surf, Earn Free Money, paid surfing, viewbars, mlm, make money with web site, cashbars, get paid to search the web, get paid to read emails, referrals, sponsors, affiliate programs, ads, sponsors, associate programs, partner programs, webmaster, revenue, commissions, affiliates, associates, surf for pay, surf for cash, surf to earn, directories, partners, referrals, program, sell, income, money making, business opportunities, get paid to surf the net, free, easy money, cash, money, extra income, online, earn money at home, freebies, internet, money tree, make money, top, top sites, top money sites, mlm, easy, pay, paid, earn, chat, affiliates, internet, www, web, residual, email, cashcrusader scripts">
@@ -25,9 +25,7 @@
 				<li><a href="http://www.paidmailz.com/pages/index.php">Home</a></li>
 				<li><a href="http://www.paidmailz.com/pages/confirm.php">Signup</a></li>
 				<li><a href="http://www.paidmailz.com/pages/enter.php">Members</a></li>
-				<li><a href="http://www.paidmailz.com/pages/advertise.php">Advertise</a></li>
-				<li><a href="http://www.paidmailz.com/pages/beenpaid.php">Been Paid</a></li>
-				<li><a href="http://www.paidmailz.com/Forum/">Forum</a></li>
+				<li><a href="http://www.paidmailz.com/pages/advertise.php">Advertise</a></li>				
 			</ul>
 		</div>
 	</div>
@@ -141,17 +139,29 @@ Us</a>.</p>
 <h6>
 <p><a href="http://www.freemoney2u.co.uk" target="_blank">Earn Money Online</a></p>
 <p><a href="http://www.mytickerz.com" target="_blank">Graphical Tickers</a></p>
-<p><a href="http://www.income-web.biz?a_aid=4bf14d6f5944c" target="_blank">Registered $3, $0.03 click</a></p>
-<p><a href="http://en.20dollars2surf.com/?ref=42587" target="_blank">Best automatic surfbar</a></p>
+<p><a href="http://swom.com/?r=69462" target="_blank">Earn Up $100 Monthly From Social Network</a></p>
 <p><a href="http://www.paidmailz.com/pages/advertise.php">Your Link Here($3/month)</a></p>
 </h6>
 </div>
-<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><!-- Begin BidVertiser Referral code -->
-<script language="JavaScript">var bdv_ref_pid=146736;var bdv_ref_type='i';var bdv_ref_option='a';var bdv_ref_eb='0';var bdv_ref_gif_id='ref_120x60_red';var bdv_ref_width=120;var bdv_ref_height=60;</script>
-<script language="JavaScript" src="http://srv.bidvertiser.com/bidvertiser/referral_button.html?pid=146736"></script>
-<noscript><a target=_blank href="http://www.bidvertiser.com/bdv/BidVertiser/bdv_advertiser.dbm">internet marketing</a></noscript>
-<!-- End BidVertiser Referral code --></td></tr></tbody></table><br>
-<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><iframe src="http://rcm.amazon.com/e/cm?t=mystore0f0-20&amp;o=1&amp;p=11&amp;l=ez&amp;f=ifr&amp;f=ifr" width="120" height="600" scrolling="no" marginwidth="0" marginheight="0" border="0" frameborder="0" style="border:none;"></iframe></td></tr></tbody></table><br>
+<a href="http://www.paidmailz.com/scripts/runner.php?BA=29&amp;hash=f73037a9195146c6a8c2ced5b06fb7c2&amp;url=http%3A%2F%2Fbanner.eurogrand.com%2Fcgi-bin%2Fredir.cgi%3Fmember%3Dmarazas2000%26lang%3Den" target="_blank"><img src="http://www.paidmailz.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.paidmailz.com%2Fimages%2Feurogrand.gif&amp;hash=65fe30fb7ed820293a1bbfb686b27b3c" alt="" border="0"></a><br><br>
+<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><script type="text/javascript">
+var pf_id = "1481462";
+var pf_format = "ctext5_120x600";
+var pf_lang = "";
+var pf_xslurl = "http://hst.tradedoubler.com/file/20649/contextual/pf_cx.xsl";
+var pf_maxresults= "5";
+var pf_method = "automatic";
+var pf_keywords = "";
+var pf_exclude = "";
+var pf_categories = "";
+var pf_epi = "Reklama";
+var pf_bgcolor = "FFFFFF";
+var pf_bordercolor = "FFFFFF";
+var pf_linkcolor = "66BA06";
+var pf_urlcolor = "FF8000";
+var pf_textcolor = "858585";
+</script>
+<script type="text/javascript" id="pf_ads" src="http://hst.tradedoubler.com/file/20649/contextual/pf2.js"> </script></td></tr></tbody></table><br>
 
 <div class="style2">
 <h6>
@@ -178,9 +188,16 @@ Us</a>.</p>
 <td width="100%" bgcolor="#FFFFFF" align="center" valign="middle">
 
 <table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><script type="text/javascript">
-var uri = 'http://impgb.tradedoubler.com/imp?type(js)g(16647456)a(1481462)' + new String (Math.random()).substring (2, 11);
-document.write('<sc'+'ript type="text/javascript" src="'+uri+'" charset="ISO-8859-1"></sc'+'ript>');
-</script><script type="text/javascript" src="http://impgb.tradedoubler.com/imp?type(js)g(16647456)a(1481462)740099740" charset="ISO-8859-1"></script></td></tr></tbody></table><br>
+var td_id = "1481462";
+var td_format = "4,6,7";
+var td_epi = "Reklama";
+var td_size = "468x60";
+var td_lang = "";
+var td_method = "automatic";
+var td_keywords = "";
+var td_exclude = "";
+</script>
+<script type="text/javascript" id="td_ads" src="http://hst.tradedoubler.com/file/20649/contextual/cx2.js"> </script></td></tr></tbody></table><br>
 </td>
 <td valign="top" width="0%" bgcolor="#9CBD2B"><img src="http://www.paidmailz.com/pages/clear.gif" width="1" height="1"></td>
 
