--- a/r/re/red/redtubedating.com.html
+++ b/r/re/red/redtubedating.com.html
@@ -1,18 +1,21 @@
-<!--The following is the downloaded HTML source of the redtubedating.com privacy policy that was archived on 2010-01-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100117115259id_/http%3A//www.redtubedating.com/privacy.html%3Fid%3Dredtubedating%26prg%3D1%26tour%3D1%26pg%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redtubedating.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819094647id_/http%3A//redtubedating.com/privacy.html%3Fid%3Dredtubedating%26prg%3D1%26tour%3D1%26pg%3D1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/public.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-                <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-                <link rel="icon" href="/animated_favicon.gif" type="image/gif"><!-- InstanceBeginEditable name="editTitle" -->
+<link rel="icon" href="http://cachecdn.fling.com/images/whitelabels/redtubedating.com/favicon.ico" type="image/x-icon">
+                <link rel="shortcut icon" href="http://cachecdn.fling.com/images/whitelabels/redtubedating.com/favicon.ico" type="image/x-icon"><!-- InstanceBeginEditable name="editTitle" -->
 <title>Redtubedating.com - World's Best Personals</title>
 <!-- InstanceEndEditable -->
-<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1263262863/members.css">
-<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1263231091/public.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/1281137534/global.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/1280515390/members.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1279062731/members.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/1279062731/public.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1279062731/public.css">
 <!-- InstanceBeginEditable name="editHead" -->
 <!-- InstanceEndEditable --><!-- InstanceParam name="bodyOnLoad" type="text" value="" -->
+
 </head>
 
 <body onload="">
@@ -319,15 +322,6 @@
                         <p><a href="/records.html?pg=1">18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement</a></p></td>
                 </tr>
             </tbody></table> 
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-4493458-1");
-pageTracker._trackPageview();
-</script>
 
 
             <!-- InstanceEndEditable --></td>
