dolidoli.com (archived on 2010-08-19)
{
  "alexa_rank": 16945,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 3706,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.1,
  "homepage_snapshot_redirected_domain": "dolidoli.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100819123125id_/http://www.dolidoli.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100819123125id_/http%3A//dolidoli.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "dolidoli.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100819120404id_/http%3A//www.dolidoli.com/privacy-policy.html",
  "policy_title": "Girl Games Online - Doli Doli Games",
  "policy_url": "dolidoli.com/privacy-policy.html",
  "sha1": "8e1f2cf41a73055dacb77252c950dfd948e86ac4",
  "simhash": 18158297756017874767,
  "simhash_updated": false,
  "site_hostname": "dolidoli.com",
  "site_url": "http://dolidoli.com",
  "smog": 13.4,
  "strict_updated": false,
  "timestamp": "20100819120404",
  "word_count": 637,
  "year": 2010
}

--- a/d/do/dol/dolidoli.com.html
+++ b/d/do/dol/dolidoli.com.html
@@ -1,15 +1,18 @@
-<!--The following is the downloaded HTML source of the dolidoli.com privacy policy that was archived on 2010-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100617124146id_/http%3A//www.dolidoli.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dolidoli.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819120404id_/http%3A//www.dolidoli.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 <base href="http://www.dolidoli.com/">
 
-<title>DoliDoli</title>
+<title>Girl Games Online - Doli Doli Games</title>
 
 <!-- meta -->
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description" content="Play new girl games on DoliDoli with your friends Toto, Lisa, Mina and Sisi and have a look at our new dress up games and cooking games.">
+<meta name="keywords" content="girl games, dolidoli, dress up, cooking, decoration, celebrity">
+
 
 <!-- css -->
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen">
@@ -42,23 +45,15 @@
 <body>
 <div id="bg" style="height:100%">
 
-	<div id="header" style="position:relative;">
-			<div id="tour" style="position:fixed;z-index:100px;top:160px;right:20px;">
-				<a href="tour.php" class="popup-tour" style="width:200px;height:200px;position:absolute;z-index:101;top:0;right:0;display:block;cursor: hand;"> 
-				</a>
-				<object name="wmode">
-					<param name="toto" value="http://cdn.dolidoli.com/upload/tour/toto.swf">
-					<embed wmode="transparent" src="http://cdn.dolidoli.com/upload/tour/toto.swf">
-					
-				</object>
-			</div>
+	<div id="header">
+		
 		<ul>
-			<li><a href="index/" class="home">Home</a></li>
-			<li><a href="account/profile/" class="profile">Profile</a></li>
-			<li><a href="shop/" class="shop">Shop</a></li>
-			<li><a href="blog/" class="blog">Blog</a></li>
-			<li><a href="contest/" class="contest">Contest</a></li>
-			<li><a href="download/" class="download">Download</a></li>
+			<li><a href="index/" class="home" title="Home">Home</a></li>
+			<li><a href="account/profile/" class="profile" title="Profile">Profile</a></li>
+			<li><a href="shop/" class="shop" title="Shop">Shop</a></li>
+			<li><a href="blog/" class="blog" title="Blog">Blog</a></li>
+			<li><a href="contest/" class="contest" title="Contest">Contest</a></li>
+			<li><a href="download/" class="download" title="Download">Download</a></li>
 		</ul>
 
 		<a href="login/" onclick="javascript:login();return false;" class="login"><strong>Log in</strong><span></span></a>
@@ -84,13 +79,19 @@
 
 		<div id="logo" class="small_4">
 
-			<!-- ADS -->
+						<!-- ADS -->
 			<div class="flt-right block type_4">
 				<div class="top"><span></span></div>
 				<div class="content type_4">
 
 					<div style="width:728px;height:90px">
-						<img src="upload/ads/banner-sus.jpg">
+					 <script language="Javascript">
+var cpmstar_rnd=Math.round(Math.random()*999999);
+var cpmstar_pid=2381;
+document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
+</script><script language="Javascript" src="http://server.cpmstar.com/view.aspx?poolid=2381&amp;script=1&amp;rnd=397625"></script>
+
+
 					</div>
 
 				</div>
@@ -147,15 +148,16 @@ By using this site, you signify your assent to the DoliDoli.com Privacy Policy. 
 
 </div>
 
-	<div id="footer">
+	<div id="footer" style="position:relative;">
 		<ul>
-			<li class="li1"><a href="about-us.html">About Us</a></li>
-			<li><a href="for-parents.html">For Parents</a></li>
-			<li><a href="privacy-policy.html">Privacy Policy</a></li>
-			<li><a href="sitemap.html">Site Map</a></li>
-			<li><a href="webmasters.html">Webmasters</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li class="li1"><a href="about-us.html" title="About Us">About Us</a></li>
+			<li><a href="for-parents.html" title="For Parents">For Parents</a></li>
+			<li><a href="privacy-policy.html" title="Privacy Policy">Privacy Policy</a></li>
+			<li><a href="sitemap.html" title="Site Map">Site Map</a></li>
+			<li><a href="webmasters.html" title="Webmasters">Webmasters</a></li>
 		</ul>
+		
+		
 		<br class="clear">
 		<a href="http://whos.amung.us/show/7cjmgofo" target="_blank"><img src="http://whos.amung.us/cwidget/7cjmgofo/f26522000000.png" alt="web tracker" width="81" height="29" border="0"></a>
 	</div>
