--- a/r/ro/rol/roliana.com.html
+++ b/r/ro/rol/roliana.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the roliana.com privacy policy that was archived on 2010-04-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100428140856id_/http%3A//www.roliana.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the roliana.com privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819130559id_/http%3A//www.roliana.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -203,7 +203,7 @@ games.</p>
 
 
 <div id="mi">
-<a href="http://www.roliana.com/forums/shop_inventory.php?action=shoplist&amp;shop=15"><img src="images/mi19.png" width="374" height="235"></a>
+<a href="http://www.roliana.com/forums/shop_inventory.php?action=shoplist&amp;shop=15"><img src="images/augustbanner.png" width="374" height="235"></a>
 </div>
 
 <div id="slider">
@@ -218,19 +218,17 @@ games.</p>
 		
 		<div class="scroller">
 			<div class="content">
-				<div class="section" id="section1"><a href="http://www.roliana.com/forums/viewtopic.php?t=157126"><img src="miscimages/mabinogi.png" width="374" height="193" border="0"></a>
-			    			</div>
-	  <div class="section" id="section2">
-						
-						<a href="http://www.roliana.com/forums/viewtopic.php?t=157126"><img src="miscimages/mabinogi.png" width="374" height="193" border="0"></a>	
-
+				<div class="section" id="section1">
+          <a href="http://www.roliana.com/forums/wheel_test.php"><img src="scrollimages/wheelgame.png" width="374" height="193" border="0"></a>
+			  </div>
+        <div class="section" id="section2">			
+				  <img src="scrollimages/augustbanner.png" width="374" height="193" border="0">
 				</div>
 				<div class="section" id="section3">
-				  <img src="scrollimages/march.png" width="374" height="193" border="0">	
-				
+				  <img src="scrollimages/augustbanner.png" width="374" height="193" border="0">					
 				</div>
 				<div class="section" id="section4">
-				  <a href="http://www.roliana.com/extras.php"><img src="scrollimages/wheelgame.png" width="374" height="193" border="0"></a>		
+				  <a href="http://www.roliana.com/forums/wheel_test.php"><img src="scrollimages/wheelgame.png" width="374" height="193" border="0"></a>		
 				</div>
 
 			</div>
@@ -259,7 +257,7 @@ items...</p>
 
 
 </div>
-<div id="footer"><a href="http://www.roliana.com/forums/shop_bs.php?item=4964&amp;action=Buy+beanstalk&quot;"><img src="http://www.roliana.com/miscimages/Eggs.gif"></a>
+<div id="footer">
 <div class="footertext">
 <a href="/terms.php" class="footerlink">Terms of Service</a> | <a href="/privacy.php" class="footerlink">Privacy Policy</a> | <a href="/rules.php" class="footerlink">Site Rules</a> | <a href="/help.php" class="footerlink">Help</a> | <a href="/extras.php" class="footerlink">Extras</a> | 
 </div>
@@ -272,15 +270,13 @@ items...</p>
 
 
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-
-</script>
-
 <script type="text/javascript">
-
-_uacct = "UA-1490146-2";
-
-urchinTracker();
-
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-1968417-5");
+pageTracker._trackPageview();
+} catch(err) </script>
 </div></body></html>
