igenius.org (archived on 2010-08-19)
{
  "alexa_rank": 185070,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3377,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.15,
  "homepage_snapshot_redirected_domain": "igenius.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100819054527id_/http://www.igenius.org/home.aspx",
  "homepage_snapshot_url": "https://web.archive.org/web/20100819054527id_/http%3A//igenius.org",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "igenius.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100819130707id_/http%3A//www.igenius.org/PrivacyPolicy.aspx",
  "policy_title": "igenius",
  "policy_url": "igenius.org/PrivacyPolicy.aspx",
  "sha1": "c9fe724988c466165d40bb196ec9d3eae486aac8",
  "simhash": 4353492081121244859,
  "simhash_updated": false,
  "site_hostname": "igenius.org",
  "site_url": "http://igenius.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100819130707",
  "word_count": 559,
  "year": 2010
}

--- a/i/ig/ige/igenius.org.html
+++ b/i/ig/ige/igenius.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the igenius.org privacy policy that was archived on 2010-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100525001822id_/http%3A//igenius.org/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the igenius.org privacy policy that was archived on 2010-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100819130707id_/http%3A//www.igenius.org/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	igenius
@@ -17,7 +17,7 @@
 
     
 <body>
-    <form name="aspnetForm" method="post" action="privacypolicy.aspx" id="aspnetForm">
+    <form name="aspnetForm" method="post" action="PrivacyPolicy.aspx" id="aspnetForm">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMjEwNDQyMTMxM2Rk3gnizmtV/r9JPM01IKE6Q3FZNuY=">
 
 
@@ -28,7 +28,7 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
 //]]>
 </script>
 
-<input type="hidden" name="__PREVIOUSPAGE" id="__PREVIOUSPAGE" value="cuAvbx-fdVRkxQGP5wF_RIWVVeW3J3Z_SpQH4nM2c1A1">
+<input type="hidden" name="__PREVIOUSPAGE" id="__PREVIOUSPAGE" value="nF_lplmL8BzuZo1pnplrQrq-yIY4-E2gt3mTGBekQ3o1">
 <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwLJkrG+AQKsgLyxCwLrz5qRDMTfCOEEf5rpdndUu+c2K0UZGSC8">
     
     <div id="wrap">
@@ -75,13 +75,13 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                                     </ul>
                                     <img src="PhotoContestimages/navi-joint2.gif" width="196" height="9"></div>
                             </li>
-                            <li><a href="starttest.aspx">
+                            <li><a href="scholarshiptestclose.aspx">
                                 <img src="PhotoContestimages/take-online-test.png" alt="take online test" width="167" height="28"></a></li>
-                            <li><a href="onlinetest-selfschedule.aspx">
+                            <li><a href="scholarshiptestclose.aspx">
                                 <img src="PhotoContestimages/schedule-online-test.png" alt="schedule online test" width="167" height="28"></a></li>
-                            <li><a href="mocktest.aspx">
+                            <li><a href="scholarshiptestclose.aspx">
                                 <img src="PhotoContestimages/take-mock-test.png" alt="take mock test" width="167" height="28"></a></li>
-                            <li><a href="online-test-guidelines.aspx">
+                            <li><a href="scholarshiptestclose.aspx">
                                 <img src="PhotoContestimages/online-test-tuidelines.png" alt="online test tuidelines" width="167" height="28"></a></li>
                         </ul>
                         <img src="PhotoContestimages/navi-joint2.gif" width="196" height="9"></div>
@@ -101,7 +101,7 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                                     </ul>
                                     <img src="PhotoContestimages/navi-joint2.gif" width="196" height="9"></div>
                             </li>
-                            <li><a href="PhotoGalUploadPhoto.aspx">
+                            <li><a href="PhotographyContestClose.aspx">
                                 <img src="PhotoContestimages/participate-now2.png" alt="participate now" width="167" height="28"></a></li>
                             <li><a href="Contest-gallery-listing.aspx">
                                 <img src="PhotoContestimages/contest-gallery2.png" alt="contest gallery" width="167" height="28"></a></li><li><a href="prizes.aspx">
@@ -113,6 +113,21 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                                 <img src="PhotoContestimages/expert's-corner.png" alt="Expert's Corner" width="167" height="28"></a></li>             
                         </ul>
                         <img src="PhotoContestimages/navi-joint2.gif" width="196" height="9"></div>
+                </span><span onmouseover="show_div('m8')" onmouseout="hide_div('m8')"><a href="DanceHomePage.aspx" title="Dance Geniuses" class="chakdhoom">Dance Geniuses</a>
+                    <div class="show-div open-div6" id="m8">
+                        <ul>
+                            <li><a href="DanceContestOverview.aspx">
+                                <img src="PhotoContestimages/dance-overview.png" alt="Overview" width="167" height="28"></a></li>
+                            <li><a href="DDCHallofFame.aspx">
+                                <img src="PhotoContestimages/hall-of-fame.png" alt="Hall of Fame" width="167" height="28"></a></li>
+                            <li><a href="DancePrize.aspx">
+                                <img src="PhotoContestimages/dance-prizes.png" alt="Prizes" width="167" height="28"></a></li>
+                            <li><a href="DanceSpecial.aspx">
+                                <img src="PhotoContestimages/dance-special.png" alt="Dance Special" width="167" height="28"></a></li>
+                            <li><a href="DanceFaq.aspx">
+                                <img src="PhotoContestimages/faq.png" alt="Faq" width="167" height="28"></a></li>
+                        </ul>
+                        <img src="PhotoContestimages/navi-joint2.gif" width="196" height="9"></div>
                 </span><span onmouseover="show_div('m7')" onmouseout="hide_div('m7')"><a href="funlearn.aspx" title="Fun &amp; Learn" class="funlearn">Fun &amp; Learn</a>
                     <div class="show-div open-div5" id="m7">
                         <ul>
@@ -120,6 +135,9 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
                                 <img src="PhotoContestimages/games.png" alt="Games" width="167" height="28"></a></li>
                             <li><a href="wallpaper.aspx">
                                 <img src="PhotoContestimages/igenius-wallpapers.png" alt="wallpapers" width="167" height="28"></a></li>
+                            <!--<li><a href="ebook.aspx">
+                                <img src="PhotoContestimages/e-book.png" alt="screensavers" width="167"
+                                    height="28" /></a></li>-->
                             <li><a href="screensaver.aspx">
                                 <img src="PhotoContestimages/screensavers.png" alt="screensavers" width="167" height="28"></a></li>
                             <li><a href="calendar.aspx">
