--- a/t/tx/txt/txtag.org.html
+++ b/t/tx/txt/txtag.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the txtag.org privacy policy that was archived on 2010-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100528034151id_/http%3A//www.txdot.gov/about_us/privacy_security.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the txtag.org privacy policy that was archived on 2010-08-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100820012837id_/http%3A//www.txdot.gov/about_us/privacy_security.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -150,7 +150,7 @@
     <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/aed_dist_operations.htm">AED, District Operations</a></div>
     <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/aed_eng_operations.htm">AED, Engineering Operations</a></div>
     <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/deputy_exec_director.htm">AED, Support Operations</a></div>
-    <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/strat_policy_perform_manage.htm">Special Assistant for Strategic Policy and Performance Management</a></div>
+    <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/strat_policy_perform_manage.htm">Director, Strategic Policy and Performance Management</a></div>
     <div class="esubtopic dotbrdrbtm"><a href="/about_us/administration/divisions/gpa_bio.htm">Director, Government and Public Affairs</a></div>
     <div class="esubtopic"><a href="/about_us/administration/offices/ogc_bio.htm">General Counsel</a></div>
    </div>
@@ -246,7 +246,7 @@ document.write('		</div>');
 document.write('	</div>');
 document.write('	<br/><br/>');
 //-->
-</script>	<br><br>	<div class="toptopiccontainer">		<div class="pageoptionsbar">Page Options</div>		<div class="pageoptions">			<a class="gray" href="mailto:?subject=For Your Information: https://web.archive.org/web/20100528034151id_/http%3A//www.txdot.gov/about_us/privacy_security.htm"><img src="/site_images/icons/emailit.png" width="42" height="18" class="imgalgnmdl" border="0" alt="E-Mail"> E-Mail Page</a><br>			<a target="_blank" class="gray" href="/cgi-bin/pfpage.plx"><img src="/site_images/icons/printit.png" border="0" width="42" height="18" alt="Printer" class="imgalgnmdl"> Printer-Friendly</a><br>			<a href="javascript:changeStyle('I',1);" class="gray"><img src="/site_images/icons/increasefont.png" width="42" height="18" alt="Enlarge Font" border="0" class="imgalgnmdl"> Enlarge Font</a><br>			<a href="javascript:changeStyle('D',1);" class="gray"><img src="/site_images/icons/reducefont.png" width="42" height="18" alt="Reduce Font" border="0" class="imgalgnmdl"> Reduce Font</a><br>		</div>	</div>	<br><br>
+</script>	<br><br>	<div class="toptopiccontainer">		<div class="pageoptionsbar">Page Options</div>		<div class="pageoptions">			<a class="gray" href="mailto:?subject=For Your Information: https://web.archive.org/web/20100820012837id_/http%3A//www.txdot.gov/about_us/privacy_security.htm"><img src="/site_images/icons/emailit.png" width="42" height="18" class="imgalgnmdl" border="0" alt="E-Mail"> E-Mail Page</a><br>			<a target="_blank" class="gray" href="/cgi-bin/pfpage.plx"><img src="/site_images/icons/printit.png" border="0" width="42" height="18" alt="Printer" class="imgalgnmdl"> Printer-Friendly</a><br>			<a href="javascript:changeStyle('I',1);" class="gray"><img src="/site_images/icons/increasefont.png" width="42" height="18" alt="Enlarge Font" border="0" class="imgalgnmdl"> Enlarge Font</a><br>			<a href="javascript:changeStyle('D',1);" class="gray"><img src="/site_images/icons/reducefont.png" width="42" height="18" alt="Reduce Font" border="0" class="imgalgnmdl"> Reduce Font</a><br>		</div>	</div>	<br><br>
 
 	</div>
 	<!-- PF Start -->
