solex.com (archived on 2010-08-20)
{
  "alexa_rank": 701519,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 4347,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.78,
  "homepage_snapshot_redirected_domain": "solex.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100926111117id_/http://www.solex.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100926111117id_/http%3A//solex.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy & Terms of Use",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "solex.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100820071016id_/http%3A//www.solex.com/privacy-policy.html",
  "policy_title": "Privacy Policy & Terms of Use",
  "policy_url": "solex.com/privacy-policy.html",
  "sha1": "b96a9309d0efd61fd20b587c31c51208abeec64e",
  "simhash": 6743355128462681464,
  "simhash_updated": false,
  "site_hostname": "solex.com",
  "site_url": "http://solex.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100820071016",
  "word_count": 715,
  "year": 2010
}

--- a/s/so/sol/solex.com.html
+++ b/s/so/sol/solex.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the solex.com privacy policy that was archived on 2010-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100401142739id_/http%3A//solex.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the solex.com privacy policy that was archived on 2010-08-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100820071016id_/http%3A//www.solex.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html><head>
 		<title>Privacy Policy &amp; Terms of Use</title>
@@ -190,11 +190,11 @@
 
 
 <blockquote>
-	“Solex simplifies the F &amp; I process by maintaining instant approval guidelines, reducing the response time for loan approvals and guarantying compliant document packages. Every dealer that demos Solex is amazed at how efficient and simple the product is to use.”
+	“Steve Butler and his team are a Dream! They are great to work with, on call 24/7 and always respond to us in a timely fashion! They have made our work simple and easy with their great finance documents. Not with Solex? What are you waiting for!”
 
 	<span class="author">
-		<strong>Steve Butler</strong>
-		President &amp; CEO, Solex LLC
+		<strong>Michele</strong>
+		RV Dealer Finance Manager
 	</span>
 </blockquote>
 </div>
